3th party Script

--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,4 @@
-/* bootstrap fontlarindan  */
+/* bootstrap fontlarini ezip font ekliyorum (root layout dosyasinda)  */
 $font-family-sans-serif: var(--font-poppins);
 
 
